--- a/package.json
+++ b/package.json
@@ -14,9 +14,18 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "bootstrap": "^4.6.0",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-fontawesome-css": "^1.0.0",
+    "gatsby-plugin-sass": "^3.1.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-bootstrap": "^1.4.3",
+    "react-dom": "^16.12.0",
+    "react-swipe-to-delete-component": "^0.5.5",
+    "sass": "^1.32.5"
   },
   "devDependencies": {
     "prettier": "2.2.1"
